--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,39 @@
-# temporary directories
-.vs
-x64
-x86
-*.user
+Intermediate/*
+Saved/*
+DerivedDataCache/*
+LocalDerivedDataCache/*
+
+Build/*
+!Build/Windows/
+Build/Windows/*
+!Build/Windows/Application.ico
+
+Packaged/*
+Script/*
+ServerTest/*
+.vs/*
+.svn/*
+Binaries/*
+#Plugins/*
+.idea/*
+*.sln
+.stversions/*
+
+# Folder itselves as well
+
+Out/
+Intermediate/
+Saved/
+DerivedDataCache/
+Packaged/
+Script/
+ServerTest/
+.vs/
+.svn/
+Binaries/
+#Plugins/
+.idea/
+.sln
+.stversions/
+Plugins/Developer/RiderLink/
+LocalDerivedDataCache/
