--- a/SGJProject/Config/DefaultEditorPerProjectUserSettings.ini
+++ b/SGJProject/Config/DefaultEditorPerProjectUserSettings.ini
@@ -1,2 +1,44 @@
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/FirstPersonBP
+
+[/Script/UnrealEd.EditorStyleSettings]
+ApplicationScale=1.000000
+bEnableUserEditorLayoutManagement=True
+ColorVisionDeficiencyPreviewType=NormalVision
+ColorVisionDeficiencySeverity=3
+bColorVisionDeficiencyCorrection=False
+bColorVisionDeficiencyCorrectionPreviewWithDeficiency=False
+XAxisColor=(R=0.594000,G=0.019700,B=0.000000,A=1.000000)
+YAxisColor=(R=0.134900,G=0.395900,B=0.000000,A=1.000000)
+ZAxisColor=(R=0.025100,G=0.207000,B=0.850000,A=1.000000)
+SelectionColor=(R=0.828000,G=0.364000,B=0.003000,A=1.000000)
+AdditionalSelectionColors[0]=(R=0.019382,G=0.496933,B=1.000000,A=1.000000)
+AdditionalSelectionColors[1]=(R=0.356400,G=0.040915,B=0.520996,A=1.000000)
+AdditionalSelectionColors[2]=(R=1.000000,G=0.168269,B=0.332452,A=1.000000)
+AdditionalSelectionColors[3]=(R=1.000000,G=0.051269,B=0.051269,A=1.000000)
+AdditionalSelectionColors[4]=(R=1.000000,G=0.715693,B=0.010330,A=1.000000)
+AdditionalSelectionColors[5]=(R=0.258183,G=0.539479,B=0.068478,A=1.000000)
+ViewportToolOverlayColor=(R=1.000000,G=1.000000,B=1.000000,A=1.000000)
+bEnableEditorWindowBackgroundColor=False
+EditorWindowBackgroundColor=(R=1.000000,G=1.000000,B=1.000000,A=1.000000)
+bUseSmallToolBarIcons=False
+MenuSearchFieldVisibilityThreshold=10
+bUseGrid=True
+bAntiAliasGrid=True
+RegularColor=(R=0.024000,G=0.024000,B=0.024000,A=1.000000)
+RuleColor=(R=0.010000,G=0.010000,B=0.010000,A=1.000000)
+CenterColor=(R=0.005000,G=0.005000,B=0.005000,A=1.000000)
+GridSnapSize=16
+GraphBackgroundBrush=(TintColor=(SpecifiedColor=(R=1.000000,G=1.000000,B=1.000000,A=1.000000),ColorUseRule=UseColor_Specified),DrawAs=Image,Tiling=NoTile,Mirroring=NoMirror,ImageType=NoImage,ImageSize=(X=32.000000,Y=32.000000),Margin=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000),ResourceObject=None,OutlineSettings=(CornerRadii=(X=0.000000,Y=0.000000,Z=0.000000,W=0.000000),Color=(SpecifiedColor=(R=0.000000,G=0.000000,B=0.000000,A=0.000000),ColorUseRule=UseColor_Specified),Width=0.000000,RoundingType=HalfHeightRadius,bUseBrushTransparency=False),UVRegion=(Min=(X=0.000000,Y=0.000000),Max=(X=0.000000,Y=0.000000),bIsValid=False),bIsDynamicallyLoaded=False,ResourceName="")
+bShowFriendlyNames=True
+bShowNativeComponentNames=True
+bExpandConfigurationMenus=False
+bShowProjectMenus=True
+bShowLaunchMenus=True
+bShowAllAdvancedDetails=False
+bShowHiddenPropertiesWhilePlaying=False
+AssetEditorOpenLocation=MainWindow
+bEnableColorizedEditorTabs=True
+CurrentAppliedTheme=134380265FBB4A9CA00A1DC9770217B8
+bEnableMiddleEllipsis=True
+
