--- a/SGJProject/Config/DefaultGame.ini
+++ b/SGJProject/Config/DefaultGame.ini
@@ -1,3 +1,7 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=28144FFD48633550B437AA90B2995C87
 ProjectName=First Person BP Game Template
+
+[/Script/UnrealEd.ProjectPackagingSettings]
+HttpChunkInstallDataDirectory=(Path="C:/Users/yarik/Desktop/Test")
+
