--- a/SGJProject/Config/DefaultEngine.ini
+++ b/SGJProject/Config/DefaultEngine.ini
@@ -68,6 +68,7 @@ NearClipPlane=5.000000
 
 +ActiveGameNameRedirects=(OldGameName="TP_FirstPersonBP",NewGameName="/Script/SGJProject")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_FirstPersonBP",NewGameName="/Script/SGJProject")
+SubtitleFontName=/Engine/EngineFonts/Roboto.Roboto
 
 [/Script/AIModule.AISystem]
 bForgetStaleActors=True
