--- a/SGJProject/Config/DefaultGame.ini
+++ b/SGJProject/Config/DefaultGame.ini
@@ -4,4 +4,5 @@ ProjectName=First Person BP Game Template
 
 [/Script/UnrealEd.ProjectPackagingSettings]
 HttpChunkInstallDataDirectory=(Path="C:/Users/yarik/Desktop/Test")
+BuildConfiguration=PPBC_Development
 
